--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -72,6 +72,35 @@
     -webkit-animation: shine 8s linear infinite;
     animation: shine 8s linear infinite;
 }
+.overlay-dark {
+    position: relative;
+}
+.bg-dark-overlay:before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 @-webkit-keyframes shine {
     from {
         background-position: center 0;
