--- a/src/features/miniPlayer/MiniPlayer.module.scss
+++ b/src/features/miniPlayer/MiniPlayer.module.scss
@@ -1,35 +1,29 @@
 .mini-player {
-    // position: fixed;
-    // bottom: 0;
-    // z-index: 999;
-    // background-color: #fff;
-    // box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    // padding: 12px;
     will-change: transform;
     transition: 0.3s transform ease-out;
     & .thumb {
+        & img {
+            transition: filter 0.3s ease-out;
+        }
+        & .controls {
+            opacity: 0;
+            transition: opacity 0.3s ease-out;
+            & svg {
+                color: #fff;
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &:hover {
+            & img {
+                filter: brightness(0.5);
+            }
+            & .controls {
+                opacity: 1;
+            }
+        }
         max-width: 80px;
         min-width: 80px;
-        & img {
-            max-width: 100%;
-            height: auto;
-        }
-    }
-    & .player-text {
-        max-width: 65vw;
-    }
-    & .current-audio {
-        font-size: 12.8px;
-        font-size: 0.8rem;
-        line-height: 1;
-    }
-    & .close {
-        position: absolute;
-        top: 4px;
-        right: 7px;
-        cursor: pointer;
-        -webkit-transition: 0.3s;
-        transition: 0.3s;
     }
     @media (min-width: 768px) {
         border-top-left-radius: 5px;
