--- a/src/features/miniPlayer/MiniPlayer.module.scss
+++ b/src/features/miniPlayer/MiniPlayer.module.scss
@@ -26,6 +26,7 @@
         min-width: 80px;
     }
     @media (min-width: 768px) {
+        min-width: 300px;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
         left: 50%;
