--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -7,6 +7,9 @@
 * {
     font-family: "Raleway", sans-serif;
 }
+body {
+    overflow-x: hidden;
+}
 .bg-img {
     background-repeat: no-repeat;
     background-position: center;
