--- a/src/layout/header/assets/Header.module.scss
+++ b/src/layout/header/assets/Header.module.scss
@@ -7,12 +7,17 @@
             position: absolute;
             top: 0;
             right: 0;
-            width: 100vw;
+            width: 50vw;
             transform: translateX(0%);
-            transition: all 0.3s ease-out;
+            transition: transform 0.3s ease-out;
             &.closed {
                 transform: translateX(110%);
             }
+        }
+    }
+    @media (max-width: 768px) {
+        & .navbar-collapse {
+            width: 100vw;
         }
     }
 }
