--- a/src/sections/Socials/Socials.module.scss
+++ b/src/sections/Socials/Socials.module.scss
@@ -3,10 +3,12 @@
         border-bottom: 1px solid rgba(256, 256, 256, 0.5);
     }
     @media (min-width: 992px) {
-        border-bottom: none;
         border-left: 1px solid rgba(256, 256, 256, 0.5);
         &:last-child {
             border-right: 1px solid rgba(256, 256, 256, 0.5);
+        }
+        &:not(:last-child) {
+            border-bottom: none;
         }
     }
     -webkit-transition: 0.3s;
